--- a/LeaveManagementSystem/Views/Account/UpdatePassword.cshtml
+++ b/LeaveManagementSystem/Views/Account/UpdatePassword.cshtml
@@ -2,7 +2,13 @@
 @{
     ViewBag.Title = "UpdatePassword";
 }
+@if (ViewBag.Response != null)
+{
+    <div class="alert alert-success">
+        <strong>Updated Successfully!</strong>
+    </div>
 
+}
 
 
 <link rel="stylesheet" href="~/Content/CustomStyleSheet.css">
@@ -18,7 +24,6 @@
     {
         @Html.LabelFor(temp => temp.Password)
         @Html.PasswordFor(temp => temp.Password, new { @class = "text-danger", required = "required" })
-
 
 
         @Html.LabelFor(temp => temp.ConfirmPassword, "Confirm Password")
@@ -39,18 +44,6 @@
     <hr>
 
 </div>
-
-@if (ViewBag.Response != null)
-{
-    <script>
-        alert("@ViewBag.Response");
-    </script>
-
-}
-
-
-
-
 
 
 <script>
