--- a/LeaveManagementSystem/Views/Designation/ListDesignation.cshtml
+++ b/LeaveManagementSystem/Views/Designation/ListDesignation.cshtml
@@ -20,4 +20,16 @@
             }
         </tbody>
     </table>
-</div> 
+</div>
+
+<style>
+    #active {
+        background-color: grey !important;
+        color: white !important;
+    }
+</style>
+<script>
+
+    $("a[href='/designation/ListDesignation']").attr("id", "active");
+
+</script>
