--- a/LeaveManagementSystem/Views/Employee/AdminEditEmployee.cshtml
+++ b/LeaveManagementSystem/Views/Employee/AdminEditEmployee.cshtml
@@ -1,6 +1,13 @@
 ﻿
 @model LeaveManagementSystem.ViewModel.EmployeeViewModel
 
+@if (ViewBag.Response != null)
+{
+    <div class="alert alert-success">
+        <strong>Updated Successfully!</strong>
+    </div>
+
+}
 
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -27,7 +34,7 @@
         @Html.HiddenFor(temp => temp.SelectedQualificationID)
         @Html.HiddenFor(temp => temp.SelectedDepartmentID)
         @Html.HiddenFor(temp => temp.SelectedDesignationID)
-        @Html.HiddenFor(temp=>temp.StartDate)
+        
 
         <div class="form-row">
             <div class="form-group col-sm-3">
@@ -94,15 +101,15 @@
 
                 @Html.LabelFor(temp => temp.Nationality, "Nationality")
                 @Html.TextBoxFor(temp => temp.Nationality, new { required = "required", @class = "form-control" })
-                @Html.ValidationMessageFor(temp => temp.Nationality, "", new { @class = "text-danger",@value=Model.Nationality,required = "required" })
+                @Html.ValidationMessageFor(temp => temp.Nationality, "", new { @class = "text-danger", @value = Model.Nationality, required = "required" })
 
             </div>
         </div>
         <div class="form-row">
             <div class="form-group col-sm-4">
                 @Html.LabelFor(temp => temp.DateOfBirth, "Date Of Birth")
-                 @Html.TextBoxFor(model => model.DateOfBirth,
-               new { @type = "date", @Value = Model.DateOfBirth.ToString("yyyy-MM-dd"), @class = "form-control", required = "required" })
+                @Html.TextBoxFor(model => model.DateOfBirth,
+              new { @type = "date", @Value = Model.DateOfBirth.ToString("yyyy-MM-dd"), @class = "form-control", required = "required" })
                 @Html.ValidationMessageFor(temp => temp.DateOfBirth, "", new { @class = "text-danger", required = "required" })
 
             </div>
@@ -110,7 +117,6 @@
 
             </div>
             <div class="form-group col-sm-4">
-                @Html.HiddenFor(temp => temp.Gender)
                 @Html.LabelFor(temp => temp.SelectedGenderID, "Gender")
                 @Html.DropDownListFor(temp => temp.SelectedGenderID, Model.GenderList, Model.GenderName, new { @class = "form-control" })
                 @Html.ValidationMessageFor(temp => temp.SelectedGenderID, "", new { @class = "text-danger", required = "required" })
@@ -142,13 +148,13 @@
                     {
                         @Html.TextBoxFor(model => model.Experience.StartDate,
                      new { @type = "date", @Value = Model.Experience.StartDate.ToString("yyyy-MM-dd"), @class = "form-control", required = "required" })
-                    
+
                     }
 
                     else
                     {
-                    @Html.TextBoxFor(model => model.Experience.StartDate,
-                                                  new { @type = "date", @class = "form-control" })
+                        @Html.TextBoxFor(model => model.Experience.StartDate,
+                                                      new { @type = "date", @class = "form-control" })
                     }
 
 
