--- a/LeaveManagementSystem/Views/Leave/LeaveDetail.cshtml
+++ b/LeaveManagementSystem/Views/Leave/LeaveDetail.cshtml
@@ -1,5 +1,12 @@
 ﻿@model LeaveManagementSystem.ViewModel.RequestVacationViewModel
 <link rel="stylesheet" href="~/Content/CustomStyleSheet.css">
+@if (ViewBag.Response != null)
+{
+    <div class="alert alert-success">
+        <strong>Updated Successfully!</strong>
+    </div>
+
+}
 
 <br />
 <a href="~/Leave/verifyleave" class="btn btn-primary" style="float:left;">Back</a>
@@ -56,7 +63,7 @@
         @Html.HiddenFor(temp => temp.RequestID)
         @Html.HiddenFor(temp => temp.CreatorID)
     </div>
-   
+
     <button type="submit" class="btn btn-success" name="LeaveStatus" value="Accept">Accept</button>
     <button type="submit" style="float:right;" class="btn btn-danger" name="LeaveStatus" value="Reject">Decline</button>
 
